--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,172 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 * {
   border: 0;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all 2s;
+  transition: width 2s, height 2s, background-color 2s, transform 2s;
+  font-family: 'Lato', sans-serif;
+  outline: 1px solid #f00 !important;
+  opacity: 1 !important;
 }
+
+:root {
+  --primary: black;
+  --secondary: white;
+  --bg-2: #ec4c8a;
+  --bg-1: #4369b2;
+}
+
+#root {
+  width: 100%;
+  overflow: hidden;
+}
+
+.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#main-menu {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  background-color: var(--primary);
+  color: var(--secondary);
+  height: 100%;
+  width: 100%;
+  align-items: flex-start;
+  overflow-y: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: var(--secondary);
+  font-size: 0.7rem;
+  flex-basis: 25%;
+}
+
+#menu-items {
+  flex-basis: 75%;
+  margin: 5%;
+}
+
+#menu-items ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  height: 100%;
+}
+
+#menu-items ul li {
+  display: flex;
+  flex: 50%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.menu-detail {
+  background-color: var(--bg-2);
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px, rgba(0, 0, 0, 0.12) 0 -12px 30px, rgba(0, 0, 0, 0.12) 0 4px 6px, rgba(0, 0, 0, 0.17) 0 12px 13px, rgba(0, 0, 0, 0.09) 0 -3px 5px;
+}
+
+.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+#detail {
+  background-color: var(--primary-2);
+  color: var(--secondary);
+  padding: 5%;
+  box-sizing: border-box;
+  min-height: 100vh;
+  margin-bottom: 0;
+}
+
+.menu-detail a {
+  font-size: 2em;
+  align-items: center;
+  padding-left: 7%;
+}
+
+.card-image {
+  width: 100%;
+  height: 50%;
+}
+
+.card-image img {
+  width: 70%;
+  height: auto;
+}
+
+.card-detail {
+  display: flex;
+  justify-content: space-between;
+}
+
+.stat {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.search {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 2rem;
+
+  /* width: 50vw; */
+}
+
+.search form input[type="search"] {
+  width: 100%;
+  padding: 1rem 2rem;
+  font-size: 1.15rem;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 0.625rem 0.75rem;
+  background-size: 1.15rem;
+}
+
+.search form input[type="search"].loading {
+  background-image: none;
+}
+
+#search-spinner {
+  width: 1rem;
+  height: 1rem;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='%23000' strokeLinecap='round' strokeLinejoin='round' strokeWidth='2' d='M20 4v5h-.582m0 0a8.001 8.001 0 00-15.356 2m15.356-2H15M4 20v-5h.581m0 0a8.003 8.003 0 0015.357-2M4.581 15H9' /%3E%3C/svg%3E");
+  animation: spin 1s infinite linear;
+  position: relative;
+  left: 0.625rem;
+  top: 0.75rem;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+/*
+@media (min-width: 720px) {
+  #main-menu {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+
+  .hide, .show {
+    opacity: 1;
+    visibility: visible;
+  }
+
+} */
