--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,29 @@
   box-sizing: border-box;
   transition: width 2s, height 2s, background-color 2s, transform 2s;
   font-family: 'Lato', sans-serif;
-  outline: 1px solid #f00 !important;
-  opacity: 1 !important;
+  /* outline: 1px solid #f00 !important;
+  opacity: 1 !important; */
 }
 
 :root {
   --primary: black;
   --secondary: white;
-  --bg-2: #ec4c8a;
+  --bg-2: #325186;
   --bg-1: #4369b2;
+  --bg-1-1: #325186;
+  --text: #88A1D2;
 }
 
 #root {
   width: 100%;
   overflow: hidden;
+  min-height: 100vh;
+}
+
+h2 {
+  font-size: 1.6rem;
+  color: var(--secondary);
+  font-weight: 500;
 }
 
 h3 {
@@ -34,6 +43,15 @@ h4 {
   color: var(--secondary);
   font-weight: 400;
   padding-right: 0.5rem;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+div.logo-container {
+  height: 500px;
+  width: 100%;
 }
 
 #logo {
@@ -72,29 +90,38 @@ a {
 }
 
 #menu-items {
-  margin-left: 5%;
+  margin-left: 0;
   flex: 75%;
+  background-color: var(--bg-1);
 }
 
 #menu-items ul {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  height: 70%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 70px;
+  place-items: center;
+  margin-top: 70px;
+  height: 50%;
+
 }
 
-.row {
-  width: 50%;
+
+#menu-items ul li a>h4 {
+  text-transform: uppercase;
+  /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
 }
 
-#menu-items ul li {
-  display: flex;
+#menu-items ul li:hover {
   align-self: center;
+  box-shadow: white -43px -35px 34px -22px;
+  border-radius: 40px;
 }
 
 .menu-detail {
   background-color: var(--bg-2);
+  padding: 1rem 0;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px, rgba(0, 0, 0, 0.12) 0 -12px 30px, rgba(0, 0, 0, 0.12) 0 4px 6px, rgba(0, 0, 0, 0.17) 0 12px 13px, rgba(0, 0, 0, 0.09) 0 -3px 5px;
 }
@@ -105,23 +132,19 @@ a {
 }
 
 #detail {
-  min-height: 100vh;
+  min-height: 70vh;
   margin-bottom: 0;
 }
 
 .menu-detail a {
   font-size: 2em;
   align-items: center;
-  padding-left: 7%;
+  padding-left: 5%;
 }
 
 .card {
   display: flex;
   margin: 0 auto 2% 5%;
-}
-
-.card-image {
-  flex: 50%;
 }
 
 .card-detail,
@@ -131,6 +154,13 @@ a {
   flex-direction: column;
   justify-content: space-around;
 }
+.card-detail :nth-child(2n){
+  background-color: var(--bg-1-1);
+  width: 100%;
+  padding: .5rem;
+  margin: 0;
+}
+
 
 .card-detail > h4 > span {
   margin-left: 0.6rem;
@@ -148,22 +178,14 @@ a {
   font-size: 1.15rem;
 }
 
-.search {
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: 2rem;
-
-  /* width: 50vw; */
-}
-
 .search form input[type="search"] {
   width: 100%;
   padding: 1rem 2rem;
-  font-size: 1.15rem;
+  font-size: 1rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: 0.625rem 0.75rem;
-  background-size: 1.15rem;
+  background-size: 1rem;
 }
 
 .search form input[type="search"].loading {
@@ -190,11 +212,17 @@ a {
   }
 }
 
+/* input[type="number"] {
+  width: 50%;
+} */
+
+
+
 img {
   width: 12rem;
   height: 12rem;
   background: #c8c8c8;
-  margin-right: 2rem;
+  margin-right: 1rem;
   border-radius: 1.5rem;
   object-fit: cover;
 }
@@ -210,24 +238,69 @@ img {
 }
 
 .pagination {
+  width:90vw;
+  overflow-x: scroll;
   display: flex;
   list-style-type: none;
   align-items: center;
   justify-content: space-around;
 }
 
+.pagination li::selection {
+  color: red;
+}
+
 .pagination li {
   margin: 0.5em;
   color: var(--secondary);
 }
+/* Coming Soon */
+.coming-card {
+  display: flex;
+  margin-left: 5%;
+  margin-right: 1%;
+  margin-bottom: 5%;
+  row-gap: 115rem;
+}
+
+.coming-card img {
+  margin-right: 0.7rem;
+}
+
+.box-detail {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: stretch;
+}
+
+
+.box-detail li:nth-child(2n) {
+  background: var(--bg-1);
+  color: var(--secondary);
+  padding: .1rem .45rem;
+  width: 100%;
+
+}
+
+.box-detail li:nth-child(2n+1) {
+  background: var(--bg-1-1);
+  color: var(--secondary);
+  padding: .1rem .45rem;
+  width: 100%;
+}
+
+/* Coming Soon - end */
+
 
 footer {
   padding: 1em 2em 2em;
   margin-bottom: 0.6em;
+  margin-top: .75rem;
   width: 100%;
-  border-top: 1px solid var(--secondary);
-  background-color: var(--primary);
-  color: var(--bg-1);
+  border-top: 1px solid var(--primary);
+  background-color: var(--bg-1-1);
+  color: var(--text);
 }
 
 /*
