--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   transition: width 2s, height 2s, background-color 2s, transform 2s;
   font-family: 'Lato', sans-serif;
+
   /* outline: 1px solid #f00 !important;
   opacity: 1 !important; */
 }
@@ -17,7 +18,7 @@
   --bg-2: #325186;
   --bg-1: #4369b2;
   --bg-1-1: #325186;
-  --text: #88A1D2;
+  --text: #88a1d2;
 }
 
 #root {
@@ -92,6 +93,9 @@ a {
 #menu-items {
   margin-left: 0;
   flex: 75%;
+  background-image: url('../assets/homebg.png');
+  background-repeat: no-repeat;
+  background-position: 110% 109%;
   background-color: var(--bg-1);
 }
 
@@ -104,12 +108,11 @@ a {
   place-items: center;
   margin-top: 70px;
   height: 50%;
-
 }
 
-
-#menu-items ul li a>h4 {
+#menu-items ul li a > h4 {
   text-transform: uppercase;
+
   /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
 }
 
@@ -134,6 +137,10 @@ a {
 #detail {
   min-height: 70vh;
   margin-bottom: 0;
+  background-image: url('../assets/bgimage.jpg');
+  background-position: 100%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .menu-detail a {
@@ -145,22 +152,52 @@ a {
 .card {
   display: flex;
   margin: 0 auto 2% 5%;
+  background-color: var(--bg-1-1);
+  border-radius: 2rem;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
 }
 
-.card-detail,
-.card-detail ul {
-  flex: 50%;
+.allTime-card {
+  display: flex;
+  margin: 0 auto 2% 5%;
+  background-color: var(--bg-1-1);
+  border-radius: 1rem;
+  padding: 0.7rem 0.5rem;
+  justify-content: space-around;
+  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
+}
+
+.col-title {
+  flex: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-}
-.card-detail :nth-child(2n){
-  background-color: var(--bg-1-1);
-  width: 100%;
-  padding: .5rem;
-  margin: 0;
+  font-size: 1.1rem;
+  font-weight: 500;
 }
 
+.col-result {
+  flex: 60%;
+  font-size: 1.1rem;
+  font-weight: 400;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.col-title :nth-child(2n+1),
+.col-result :nth-child(2n+1) {
+  background-color: var(--bg-1-1);
+  color: var(--secondary);
+}
+
+.col-title :nth-child(2n),
+.col-result :nth-child(2n) {
+  background-color: var(--bg-1);
+  margin: 0;
+  color: var(--secondary);
+}
 
 .card-detail > h4 > span {
   margin-left: 0.6rem;
@@ -180,12 +217,12 @@ a {
 
 .search form input[type="search"] {
   width: 100%;
-  padding: 1rem 2rem;
+  padding: 1rem 3rem;
   font-size: 1rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
-  background-position: 0.625rem 0.75rem;
-  background-size: 1rem;
+  background-position: 0.725rem 1.075rem;
+  background-size: 1.2rem;
 }
 
 .search form input[type="search"].loading {
@@ -212,11 +249,13 @@ a {
   }
 }
 
-/* input[type="number"] {
-  width: 50%;
-} */
-
-
+input[type="number"] {
+  width: 25%;
+  font-size: 1rem;
+  margin: 0.5rem 5% 0;
+  margin-left: 55%;
+  padding: 0.5rem 1rem;
+}
 
 img {
   width: 12rem;
@@ -238,7 +277,7 @@ img {
 }
 
 .pagination {
-  width:90vw;
+  width: 90vw;
   overflow-x: scroll;
   display: flex;
   list-style-type: none;
@@ -246,21 +285,27 @@ img {
   justify-content: space-around;
 }
 
-.pagination li::selection {
-  color: red;
-}
-
 .pagination li {
   margin: 0.5em;
   color: var(--secondary);
 }
+
+.pagination li::selection {
+  color: red;
+}
+
+
+
 /* Coming Soon */
 .coming-card {
   display: flex;
   margin-left: 5%;
   margin-right: 1%;
   margin-bottom: 5%;
-  row-gap: 115rem;
+  background-color: var(--bg-1-1) 0.9;
+  border-radius: 2rem;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
 }
 
 .coming-card img {
@@ -274,29 +319,26 @@ img {
   justify-content: stretch;
 }
 
-
 .box-detail li:nth-child(2n) {
   background: var(--bg-1);
   color: var(--secondary);
-  padding: .1rem .45rem;
+  padding: 0.1rem 0.45rem;
   width: 100%;
-
 }
 
 .box-detail li:nth-child(2n+1) {
   background: var(--bg-1-1);
   color: var(--secondary);
-  padding: .1rem .45rem;
+  padding: 0.1rem 0.45rem;
   width: 100%;
 }
 
 /* Coming Soon - end */
 
-
 footer {
   padding: 1em 2em 2em;
   margin-bottom: 0.6em;
-  margin-top: .75rem;
+  margin-top: 0.75rem;
   width: 100%;
   border-top: 1px solid var(--primary);
   background-color: var(--bg-1-1);
