--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   transition: width 2s, height 2s, background-color 2s, transform 2s;
   font-family: 'Lato', sans-serif;
 
-  /* outline: 1px solid #f00 !important;
-  opacity: 1 !important; */
+  outline: 1px solid #f00 !important;
+  opacity: 1 !important;
 }
 
 :root {
@@ -23,18 +23,19 @@
 
 #root {
   width: 100%;
-  overflow: hidden;
+
+  /* overflow: hidden; */
   min-height: 100vh;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: var(--secondary);
   font-weight: 500;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: var(--secondary);
   font-weight: 400;
 }
@@ -71,8 +72,9 @@ div.logo-container {
 }
 
 #main-menu {
+  z-index: 2;
   display: flex;
-  position: absolute;
+  position: fixed;
   flex-direction: column;
   background-color: var(--primary);
   color: var(--secondary);
@@ -96,6 +98,7 @@ a {
   background-image: url('../assets/homebg.png');
   background-repeat: no-repeat;
   background-position: 110% 109%;
+  background-size: 24%;
   background-color: var(--bg-1);
 }
 
@@ -152,48 +155,39 @@ a {
 .card {
   display: flex;
   margin: 0 auto 2% 5%;
-  background-color: var(--bg-1-1);
-  border-radius: 2rem;
+  background-color: var(--bg-1-1) 0.9;
+  border-radius: 5px;
   padding: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, #00000017 0 32px 16px;
 }
 
-.allTime-card {
+table {
   display: flex;
+  width: 70vh;
+}
+
+.col-result tr td{
+  flex: 1 2;
+}
+
+.allTime-card,
+.box-card {
+  display: flex;
+  flex-direction: row;
   margin: 0 auto 2% 5%;
-  background-color: var(--bg-1-1);
+  background-color: var(--bg-1-1) 0.9;
   border-radius: 1rem;
   padding: 0.7rem 0.5rem;
-  justify-content: space-around;
+  justify-content: center;
+  align-content: stretch;
   box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
 }
 
-.col-title {
-  flex: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  font-size: 1.1rem;
-  font-weight: 500;
-}
-
-.col-result {
-  flex: 60%;
-  font-size: 1.1rem;
-  font-weight: 400;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-end;
-}
-
-.col-title :nth-child(2n+1),
-.col-result :nth-child(2n+1) {
-  background-color: var(--bg-1-1);
+table tbody tr:nth-child(2n+1) {
   color: var(--secondary);
 }
 
-.col-title :nth-child(2n),
-.col-result :nth-child(2n) {
+table tbody tr:nth-child(2n) {
   background-color: var(--bg-1);
   margin: 0;
   color: var(--secondary);
@@ -212,7 +206,7 @@ a {
 .stat {
   list-style-type: none;
   color: var(--secondary);
-  font-size: 1.15rem;
+  font-size: 1rem;
 }
 
 .search form input[type="search"] {
@@ -277,7 +271,8 @@ img {
 }
 
 .pagination {
-  width: 90vw;
+  width: 85vw;
+  margin-left: 5%;
   overflow-x: scroll;
   display: flex;
   list-style-type: none;
@@ -290,11 +285,27 @@ img {
   color: var(--secondary);
 }
 
-.pagination li::selection {
-  color: red;
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
 }
 
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--bg-1-1); 
+  border-radius: 10px;
+}
 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--bg-1); 
+}
 
 /* Coming Soon */
 .coming-card {
@@ -303,7 +314,7 @@ img {
   margin-right: 1%;
   margin-bottom: 5%;
   background-color: var(--bg-1-1) 0.9;
-  border-radius: 2rem;
+  border-radius: 5px;
   padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
 }
@@ -313,31 +324,40 @@ img {
 }
 
 .box-detail {
+  flex: 1;
+}
+
+.box-detail ul {
   display: flex;
-  align-items: center;
   flex-direction: column;
-  justify-content: stretch;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .box-detail li:nth-child(2n) {
+  color: var(--secondary);
+  padding: 0.1rem 0.45rem;
+  width: 100%;
+  flex: 1;
+}
+
+.box-detail li:nth-child(2n+1) {
   background: var(--bg-1);
   color: var(--secondary);
   padding: 0.1rem 0.45rem;
   width: 100%;
-}
-
-.box-detail li:nth-child(2n+1) {
-  background: var(--bg-1-1);
-  color: var(--secondary);
-  padding: 0.1rem 0.45rem;
-  width: 100%;
+  flex: 1.5;
 }
 
 /* Coming Soon - end */
 
 footer {
+  position: fixed;
+  bottom: 0;
   padding: 1em 2em 2em;
-  margin-bottom: 0.6em;
+  margin-bottom: 0;
   margin-top: 0.75rem;
   width: 100%;
   border-top: 1px solid var(--primary);
@@ -345,17 +365,63 @@ footer {
   color: var(--text);
 }
 
-/*
-@media (min-width: 720px) {
+@media (min-width: 768px) {
   #main-menu {
     display: flex;
-    flex-direction: column;
+    width: 100%;
     position: relative;
+    flex-direction: row;
+    background-color: var(--primary);
+    color: var(--secondary);
   }
 
-  .hide, .show {
-    opacity: 1;
-    visibility: visible;
+  .icons {
+    display: none;
   }
 
-} */
+  #menu-items {
+    background-size: 18%;
+  }
+
+  #menu-items ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+  }
+
+  #detail {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #search-detail {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: flex-start;
+    align-content: stretch;
+    padding-bottom: 6em;
+  } 
+
+  .card,
+  .box-card,
+  .coming-card,
+  .allTime-card {
+    display: flex;
+    flex: 25% 1;
+    border-radius: 5px;
+    justify-content: flex-start;
+    align-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    max-width: 419px;
+  }
+
+  .card-detail {
+    flex:60%;
+  }
+}
