--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,25 @@
   transition: width 2s, height 2s, background-color 2s, transform 2s;
   font-family: 'Lato', sans-serif;
 
-  outline: 1px solid #f00 !important;
-  opacity: 1 !important;
+  /* outline: 1px solid #f00 !important;
+  opacity: 1 !important; */
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--bg-1-1);
+  border-radius: 10px;
 }
 
 :root {
@@ -19,6 +36,11 @@
   --bg-1: #4369b2;
   --bg-1-1: #325186;
   --text: #88a1d2;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--bg-1);
 }
 
 #root {
@@ -113,10 +135,37 @@ a {
   height: 50%;
 }
 
+.pagination {
+  width: 85vw;
+  margin-left: 5%;
+  overflow-x: scroll;
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.pagination li {
+  cursor: pointer;
+  margin: 0.5em;
+  background-color: var(--bg-1);
+  padding: 10px;
+  border-radius: 5px;
+  color: var(--secondary);
+}
+
+.pagination li:nth-child(1),
+.pagination li:last-of-type {
+  background-color: var(--secondary);
+  color: var(--bg-1);
+}
+
+.card-detail li:nth-child(2n+1) {
+  background-color: var(--bg-1-1);
+}
+
 #menu-items ul li a > h4 {
   text-transform: uppercase;
-
-  /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
 }
 
 #menu-items ul li:hover {
@@ -158,6 +207,7 @@ a {
   background-color: var(--bg-1-1) 0.9;
   border-radius: 5px;
   padding: 1rem;
+  color: var(--secondary);
   box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, #00000017 0 32px 16px;
 }
 
@@ -166,7 +216,7 @@ table {
   width: 70vh;
 }
 
-.col-result tr td{
+.col-result tr td {
   flex: 1 2;
 }
 
@@ -211,7 +261,7 @@ table tbody tr:nth-child(2n) {
 
 .search form input[type="search"] {
   width: 100%;
-  padding: 1rem 3rem;
+  padding: 1rem 5rem;
   font-size: 1rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
@@ -244,10 +294,11 @@ table tbody tr:nth-child(2n) {
 }
 
 input[type="number"] {
-  width: 25%;
+  width: 75px;
   font-size: 1rem;
-  margin: 0.5rem 5% 0;
-  margin-left: 55%;
+  margin: 1% auto 1% 50%;
+
+  /* margin-left: 50%; */
   padding: 0.5rem 1rem;
 }
 
@@ -270,43 +321,6 @@ img {
   padding: 5%;
 }
 
-.pagination {
-  width: 85vw;
-  margin-left: 5%;
-  overflow-x: scroll;
-  display: flex;
-  list-style-type: none;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.pagination li {
-  margin: 0.5em;
-  color: var(--secondary);
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 20px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--bg-1-1); 
-  border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: var(--bg-1); 
-}
-
 /* Coming Soon */
 .coming-card {
   display: flex;
@@ -323,46 +337,16 @@ img {
   margin-right: 0.7rem;
 }
 
-.box-detail {
-  flex: 1;
-}
-
-.box-detail ul {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.box-detail li:nth-child(2n) {
-  color: var(--secondary);
-  padding: 0.1rem 0.45rem;
-  width: 100%;
-  flex: 1;
-}
-
-.box-detail li:nth-child(2n+1) {
-  background: var(--bg-1);
-  color: var(--secondary);
-  padding: 0.1rem 0.45rem;
-  width: 100%;
-  flex: 1.5;
-}
-
-/* Coming Soon - end */
-
 footer {
   position: fixed;
   bottom: 0;
-  padding: 1em 2em 2em;
+  padding: 1rem;
   margin-bottom: 0;
   margin-top: 0.75rem;
   width: 100%;
   border-top: 1px solid var(--primary);
   background-color: var(--bg-1-1);
-  color: var(--text);
+  color: var(--secondary);
 }
 
 @media (min-width: 768px) {
@@ -382,6 +366,36 @@ footer {
   #menu-items {
     background-size: 18%;
   }
+
+  .box-detail {
+    flex: 1;
+  }
+
+  .box-detail ul {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .box-detail li:nth-child(2n) {
+    color: var(--secondary);
+    padding: 0.1rem 0.45rem;
+    width: 100%;
+    flex: 1;
+  }
+
+  .box-detail li:nth-child(2n+1) {
+    background: var(--bg-1);
+    color: var(--secondary);
+    padding: 0.1rem 0.45rem;
+    width: 100%;
+    flex: 1.5;
+  }
+
+  /* Coming Soon - end */
 
   #menu-items ul {
     display: flex;
@@ -405,7 +419,7 @@ footer {
     justify-content: flex-start;
     align-content: stretch;
     padding-bottom: 6em;
-  } 
+  }
 
   .card,
   .box-card,
@@ -422,6 +436,6 @@ footer {
   }
 
   .card-detail {
-    flex:60%;
+    flex: 60%;
   }
 }
