--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,11 @@
 }
 
 :root {
-  --primary: black;
-  --secondary: white;
-  --bg-2: #325186;
-  --bg-1: #4369b2;
-  --bg-1-1: #325186;
+  --primary: #343a40;
+  --secondary: #eee;
+  --bg-2: #30363c;
+  --bg-1: #30363c;
+  --bg-1-1: #30363c;
   --text: #88a1d2;
 }
 
@@ -73,9 +73,46 @@ ul li {
   list-style-type: none;
 }
 
+.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: var(--secondary);
+  font-size: 0.7rem;
+  flex-basis: 5%;
+}
+
+header {
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--bg-1-1);
+  padding: 15px 30px;
+  box-sizing: border-box;
+}
+
 div.logo-container {
   height: 500px;
   width: 100%;
+}
+
+.menu-nav ul {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.menu-nav ul li a {
+  display: none;
+}
+
+.back-home {
+  padding: 1em;
 }
 
 #logo {
@@ -86,11 +123,6 @@ div.logo-container {
   height: auto;
   top: 1px;
   align-self: center;
-}
-
-.hide {
-  opacity: 0;
-  visibility: hidden;
 }
 
 #main-menu {
@@ -105,13 +137,6 @@ div.logo-container {
 
   /* align-items: flex-start; */
   overflow-y: hidden;
-}
-
-a {
-  text-decoration: none;
-  color: var(--secondary);
-  font-size: 0.7rem;
-  flex-basis: 5%;
 }
 
 #menu-items {
@@ -134,6 +159,13 @@ a {
   margin-top: 70px;
   height: 50%;
 }
+
+/*
+.menu-detail a {
+  font-size: 2em;
+  align-items: center;
+  padding-left: 5%;
+} */
 
 .pagination {
   width: 85vw;
@@ -158,10 +190,6 @@ a {
 .pagination li:last-of-type {
   background-color: var(--secondary);
   color: var(--bg-1);
-}
-
-.card-detail li:nth-child(2n+1) {
-  background-color: var(--bg-1-1);
 }
 
 #menu-items ul li a > h4 {
@@ -195,20 +223,42 @@ a {
   background-repeat: no-repeat;
 }
 
-.menu-detail a {
-  font-size: 2em;
-  align-items: center;
-  padding-left: 5%;
+.card {
+  width: 300px;
+  margin: 1rem;
+  background-color: var(--bg-1-1);
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, #00000017 0 32px 16px;
 }
 
-.card {
-  display: flex;
-  margin: 0 auto 2% 5%;
-  background-color: var(--bg-1-1) 0.9;
-  border-radius: 5px;
-  padding: 1rem;
+.card-detail {
   color: var(--secondary);
-  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, #00000017 0 32px 16px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  letter-spacing: 0.5px;
+}
+
+.card-detail :nth-last-child(2n) {
+  background-color: #eee;
+  color: #30363c;
+  padding: 2px 5px;
+  width: 100%;
+}
+
+.card-detail :nth-last-child(2n + 1) {
+  background-color: #30363c;
+  color: #eee;
+  padding: 2px 5px;
+  width: 100%;
+}
+
+.card-container .movie-mark {
+  background-color: orange;
+  color: orange;
 }
 
 table {
@@ -246,12 +296,14 @@ table tbody tr:nth-child(2n) {
 .card-detail > h4 > span {
   margin-left: 0.6rem;
   font-weight: 600;
+  background-color: var(--bg-1-1);
+  color: orange;
 }
 
-.card-detail > ul > li > span {
+/* .card-detail > ul > li > span {
   margin-left: 0.6rem;
   font-weight: 600;
-}
+} */
 
 .stat {
   list-style-type: none;
@@ -303,11 +355,9 @@ input[type="number"] {
 }
 
 img {
-  width: 12rem;
-  height: 12rem;
+  width: 100%;
+  height: auto;
   background: #c8c8c8;
-  margin-right: 1rem;
-  border-radius: 1.5rem;
   object-fit: cover;
 }
 
@@ -350,6 +400,12 @@ footer {
 }
 
 @media (min-width: 768px) {
+  .menu-nav ul li a {
+    display: block;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+
   #main-menu {
     display: flex;
     width: 100%;
@@ -413,11 +469,8 @@ footer {
 
   #search-detail {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    align-items: stretch;
-    justify-content: flex-start;
-    align-content: stretch;
+    justify-content: space-evenly;
     padding-bottom: 6em;
   }
 
@@ -425,14 +478,13 @@ footer {
   .box-card,
   .coming-card,
   .allTime-card {
-    display: flex;
-    flex: 25% 1;
-    border-radius: 5px;
-    justify-content: flex-start;
-    align-content: space-between;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    max-width: 419px;
+    width: 300px;
+    margin: 1rem;
+    background-color: var(--bg-1-1);
+    box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
   }
 
   .card-detail {
