--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 /* Track */
@@ -26,7 +26,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--bg-1-1);
+  background: var(--text);
   border-radius: 10px;
 }
 
@@ -35,8 +35,9 @@
   --secondary: #eee;
   --bg-2: #30363c;
   --bg-1: #30363c;
-  --bg-1-1: #30363c;
-  --text: #88a1d2;
+  --bg-3: #f5efed;
+  --bg-1-1: #E71D36;
+  --text: #9bc53d;
 }
 
 /* Handle on hover */
@@ -45,7 +46,7 @@
 }
 
 #root {
-  background-color: var(--bg-1-1);
+  background-color: var(--primary);
   color: var(--secondary);
 
   /* overflow: hidden; */
@@ -88,18 +89,33 @@ a {
 
 header {
   width: 100vw;
+  position: fixed;
+  z-index: 10;
   display: flex;
   justify-content: space-between;
-  background-color: var(--bg-1-1);
+  background-color: var(--bg-3);
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   padding: 15px 30px;
   box-sizing: border-box;
-  border-bottom: 4px solid var(--primary);
   margin-bottom: 5px;
+  align-items: center;
+  max-height: 75px;
+  overflow-y: hidden;
 }
 
 div.logo-container {
-  height: 500px;
-  width: 100%;
+  height: 45px;
+  padding: 5px 10px;
+}
+
+div.logo-container a {
+  color: #9bc53d;
+  background-color: var(--primary);
+  padding: 10px 15px;
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 1em;
+  text-transform: uppercase;
 }
 
 .menu-nav ul {
@@ -113,13 +129,17 @@ div.logo-container {
 .menu-nav ul li a {
   display: block;
   margin: 0 5px;
+  color: var(--primary);
+  font-weight: 600;
 }
 
 .back-home {
   padding: 1em;
+  color: var(--primary);
+  font-weight: 600;
 }
 
-#logo {
+#logos {
   content: url('../assets/mclogo.png');
   margin-right: 0.5rem;
   position: relative;
@@ -182,6 +202,7 @@ div.logo-container {
 }
 
 .pagination li {
+  display: none;
   cursor: pointer;
   margin: 0.5px;
   border-radius: 5px;
@@ -190,8 +211,15 @@ div.logo-container {
 
 .pagination li:nth-child(1),
 .pagination li:last-of-type {
+  display: block;
   background-color: var(--secondary);
   color: var(--bg-1);
+}
+
+.pagination li:nth-child(3),
+.pagination li:nth-child(9),
+.pagination li:nth-child(6){
+  display: block;
 }
 
 #menu-items ul li a > h4 {
@@ -218,6 +246,8 @@ div.logo-container {
 
 #detail {
   min-height: 70vh;
+  position: relative;
+  top: 75px;
   margin-bottom: 0;
   background-color: var(--bg-2);
   background-position: 100%;
@@ -227,7 +257,7 @@ div.logo-container {
 
 .card {
   width: 300px;
-  margin: 1rem;
+  margin: 1rem auto;
   background-color: var(--bg-1-1);
   position: relative;
   overflow: hidden;
@@ -242,73 +272,31 @@ div.logo-container {
   justify-content: space-evenly;
   align-items: flex-end;
   letter-spacing: 0.5px;
-  padding: 1rem;
+  padding: 1rem 0;
+  align-items: stretch;
 }
 
-/* .card-detail :nth-last-child(2n) {
-  background-color: var(--secondary);
-  padding: 2px 5px;
-  width: 100%;
-} */
-
-.card-detail :nth-last-child(2n) {
+.card-detail li:nth-last-child(2n) {
   background-color: var(--bg-1-1);
-  color: var(--secondary);
-  padding: 2px 5px;
+  color: var(--bg-3);
+  padding: 2px 1rem;
   width: 100%;
   align-items: end;
 }
 
-.card-detail :nth-last-child(2n + 1) {
-  padding: 2px 5px;
+.card-detail li:nth-last-child(2n + 1) {
+  padding: 2px 1rem;
   width: 100%;
+  background-color: var(--primary);
 }
 
-/*
-
-table {
-  display: flex;
-  width: 70vh;
-}
-
-.col-result tr td {
-  flex: 1 2;
-}
-
-.allTime-card,
-.box-card {
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto 2% 5%;
-  background-color: var(--bg-1-1) 0.9;
-  border-radius: 1rem;
-  padding: 0.7rem 0.5rem;
-  justify-content: center;
-  align-content: stretch;
-  box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, rgba(0, 0, 0, 0.09) 0 32px 16px;
-}
-
-table tbody tr:nth-child(2n+1) {
-  color: var(--secondary);
-}
-
-table tbody tr:nth-child(2n) {
+.movie-mark {
   background-color: var(--bg-1);
-  margin: 0;
-  color: var(--secondary);
+  color: var(--text);
+  margin-left: 20px;
+  padding: 0 10px ;
+  border-radius: 5px;
 }
-
-.card-detail > h4 > span {
-  margin-left: 0.6rem;
-  font-weight: 600;
-  background-color: var(--bg-1-1);
-  color: orange;
-} */
-
-/* .card-detail > ul > li > span {
-  margin-left: 0.6rem;
-  font-weight: 600;
-} */
 
 .stat {
   list-style-type: none;
@@ -317,18 +305,19 @@ table tbody tr:nth-child(2n) {
 }
 
 .search {
-  margin: 0 2%;
+  margin: 0;
   display: flex;
   justify-content: space-between;
 }
 
 .search form input[type="search"] {
-  padding: 1rem 5rem;
+  padding: 1rem 3rem;
   font-size: 1rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: 0.725rem 1.075rem;
   background-size: 1.2rem;
+  background-color: var(--bg-3);
 }
 
 .search form input[type="search"].loading {
@@ -396,7 +385,7 @@ img {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   padding: 1rem;
   margin-bottom: 0;
@@ -471,8 +460,8 @@ footer {
   }
 
   #detail {
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    top: 75px;
   }
 
   #search-detail {
