--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
   --bg-2: #30363c;
   --bg-1: #30363c;
   --bg-3: #f5efed;
-  --bg-1-1: #E71D36;
+  --bg-1-1: #e71d36;
   --text: #9bc53d;
 }
 
@@ -94,7 +94,7 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: var(--bg-3);
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0 48px 100px 0;
   padding: 15px 30px;
   box-sizing: border-box;
   margin-bottom: 5px;
@@ -163,34 +163,6 @@ div.logo-container a {
   overflow-y: hidden;
 }
 
-#menu-items {
-  margin-left: 0;
-  flex: 75%;
-  background-image: url('../assets/homebg.png');
-  background-repeat: no-repeat;
-  background-position: 110% 109%;
-  background-size: 24%;
-  background-color: var(--bg-1);
-}
-
-#menu-items ul {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 5px;
-  grid-row-gap: 70px;
-  place-items: center;
-  margin-top: 70px;
-  height: 50%;
-}
-
-/*
-.menu-detail a {
-  font-size: 2em;
-  align-items: center;
-  padding-left: 5%;
-} */
-
 .pagination {
   width: 85vw;
   margin-left: 5%;
@@ -218,18 +190,8 @@ div.logo-container a {
 
 .pagination li:nth-child(3),
 .pagination li:nth-child(9),
-.pagination li:nth-child(6){
+.pagination li:nth-child(6) {
   display: block;
-}
-
-#menu-items ul li a > h4 {
-  text-transform: uppercase;
-}
-
-#menu-items ul li:hover {
-  align-self: center;
-  box-shadow: white -43px -35px 34px -22px;
-  border-radius: 40px;
 }
 
 .menu-detail {
@@ -270,7 +232,6 @@ div.logo-container a {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: flex-end;
   letter-spacing: 0.5px;
   padding: 1rem 0;
   align-items: stretch;
@@ -294,7 +255,7 @@ div.logo-container a {
   background-color: var(--bg-1);
   color: var(--text);
   margin-left: 20px;
-  padding: 0 10px ;
+  padding: 0 10px;
   border-radius: 5px;
 }
 
@@ -349,6 +310,7 @@ input[type="number"] {
   width: 75px;
   font-size: 1rem;
   padding: 0.5rem 1rem;
+  background-color: var(--secondary);
 }
 
 img {
@@ -394,6 +356,11 @@ footer {
   border-top: 1px solid var(--primary);
   background-color: var(--bg-1-1);
   color: var(--secondary);
+  text-align: center;
+}
+
+footer span {
+  color: var(--text);
 }
 
 @media (min-width: 768px) {
@@ -403,13 +370,8 @@ footer {
     padding: 0.45rem;
   }
 
-  #main-menu {
-    display: flex;
-    width: 100%;
-    position: relative;
-    flex-direction: row;
-    background-color: var(--primary);
-    color: var(--secondary);
+  .pagination li {
+    display: block;
   }
 
   .icons {
@@ -450,18 +412,10 @@ footer {
 
   /* Coming Soon - end */
 
-  #menu-items ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
-  }
-
   #detail {
     position: relative;
     top: 75px;
+    overflow-y: hidden;
   }
 
   #search-detail {
